@@ -1,5 +1,6 @@
 package io.repaint.maven.tiles
 
+import groovy.transform.CompileStatic
 import org.apache.maven.plugin.AbstractMojo
 import org.apache.maven.plugins.annotations.Component
 import org.apache.maven.plugins.annotations.Parameter
@@ -10,6 +11,7 @@ import org.codehaus.plexus.logging.Logger
  *
  * @author: Richard Vowles - https://plus.google.com/+RichardVowles
  */
+@CompileStatic
 abstract class AbstractTileMojo extends AbstractMojo {
 	public static final String TILE_POM = "tile.xml"
 
