@@ -8,10 +8,12 @@ All notable changes to this project will be documented in this file.
 - The Maven Tiles Plugin now supports `<pluginManagement>` and `<profiles>`
   declared inside of a tile.
 
+
 === Changed
 - Major internal reworking of how tiles are applied. Each tile is now
   injected into your POM's Model as a parent artifact, with your `pom.xml`'s
   original parent being used as the top level parent of the root tile.
+- `<buildSmells>` configuration is now used at tile release time.
 
 == 1.3 - 2014-09-24
 
